@@ -609,6 +609,7 @@ Calendar.prototype.create = function (_par) {
 	if (this.isPopup) {
 		div.style.position = "absolute";
 		div.style.display = "none";
+		div.style.zIndex = 1000;
 	}
 	div.appendChild(table);
 
