@@ -100,7 +100,9 @@
   "email" => "E-mail",
   "enclosure" => "Enclosure",
   "error" => "Error",
+  "error_attributeedit_default"       => "An unknown error has occurred.",
   "error_attributeedit_noselectorset" => "Please select the records you wish to edit.",
+  "error_attributeedit_validationfailed" => "This value is not allowed.",
   "error_attributeedit_update" => "An error occured when updating the selected records.",
   "error_captchafield" => "The given code is invalid, please try again",
   "error_copy_record" => "Unknown error copying record",
