@@ -47,6 +47,8 @@ Changed in ATK 6.2
 + The submit-handling of a the javascript method atkMRASubmit() can be overridden by proving
   a javascript method with the name atkMRA_<action>. Where action is the name of the action you
   wish to override. [Peter, Dennis]
++ Added method nodeTitle() to atkUI. It supports the same functionality as the title() method,
+  but supports providing an object instead an atkNodeType. [Peter, Dennis]
 * Fixed atkTagAttribute (javascript was not working when the atkTagAttribute
   was used in a relation). [Harrie]
 * Fix dispay seconds in edit mode - atktimeattribute. [Yury]
@@ -134,7 +136,14 @@ Changed in ATK 6.2
   Also some code refactoring. [Dennis]
 * Removed javascript call to showTab, this call is not necessary anymore and created
   problems in internet explorer 7. [Lineke]
-
+* Added setMasterNode in atkAttributeEditHandler and a testcase for it. [Dennis, Peter]
+* atkNode now uses the method nodeTitle() instead of title() to retrieve the title.
+  [Peter, Dennis]
+* Added fix for toQueryString for prototype calls which encoded a value twice instead 
+  of once, when you are using the same key more then once (an array of values).
+  [Peter, Dennis]
+* Added a zIndex for the calendar.js script to make sure calendars are also on top in
+  dialogs. [Peter, Dennis]
 
 
 Changed in ATK 6.1
